src/index.css
/* ... */
.newsletter-page--subscribe-btn:hover,
.newsletter-page--subscribe-btn:focus-visible,
.newsletter-page--subscribe-btn:focus {
  color: white;
  background-color: var(--primary-red);
  cursor: pointer;
}

.newsletter-page--form-terms {
  max-width: 1000px;
  font-weight: 600;
  color: #636363;
  font-size: 0.85rem;
}
/* NEWSLETTER END */

/* CREATE PAGE START */
.create-page--container {
  padding: var(--poems-component-outlet-padding);
}

.create-page--two-parts-flex-container {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  gap: 2rem;
}

.create-page--two-parts-flex-container > *:first-child {
  /* grow - shrink - basis */
  flex: 3 1 0;
}

.create-page--two-parts-flex-container > *:last-child {
  flex: 1 1 0;
}

.create-page--user-poem-text-input {
  width: 100%;
  overflow: auto;
  resize: vertical;
  border: 2px solid gainsboro;
  border-radius: 4px;
  padding: 1rem;
  box-sizing: border-box;
  min-height: 300px;
  background-color: #fcfcfc;
  font-size: 1.2rem;
  font-family: var(--noto-sans-font);
}

.create-page--save-user-poem-btn {
  padding: 0.4rem;
  width: 100%;
  margin-bottom: 0.25rem;
  font-size: 1.1rem;
  letter-spacing: 1.5ch;
  font-weight: 600;
  color: #5e5e5e;
  background-color: #f1f1f1;
  text-transform: uppercase;
  font-family: var(--noto-sans-font);
  border: 1px solid #aeaeae;
  border-radius: 4px;
}

.create-page--save-user-poem-btn:hover,
.create-page--save-user-poem-btn:focus,
.create-page--save-user-poem-btn:focus-visible {
  border: 1px solid var(--primary-red);
  background-color: #fafafa;
  cursor: pointer;
}

.rhyming-help-component--container {
  border: 2px solid gainsboro;
  background-color: #fcfcfc;
  border-radius: 4px;
  padding: 1rem;
  box-sizing: border-box;
  min-height: calc(390px - 0.25rem);
}

.rhyming-help-component--heading {
  margin: 0rem 0rem 0.5rem 0rem;
  font-size: 1.1rem;
  font-weight: 600;
  text-align: center;
}

.rhyming-help-component--input-area {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.rhyming-help-component--input-area > input {
  padding: 0.6rem 0.4rem;
}

.rhyming-help-component--input-area > input,
.rhyming-help-component--input-area > button {
  font-size: 0.9rem;
  font-family: var(--noto-sans-font);
  border: 1px solid #aeaeae;
  border-radius: 4px;
}

.rhyming-help-component--input-area > button {
  padding: 0.4rem;
  text-transform: uppercase;
  letter-spacing: 0.3ch;
  font-weight: 600;
  color: #5e5e5e;
  background-color: #f1f1f1;
}

.rhyming-help-component--input-area > button:hover,
.rhyming-help-component--input-area > button:focus,
.rhyming-help-component--input-area > button:focus-visible {
  border: 1px solid var(--primary-red);
  background-color: #fafafa;
  cursor: pointer;
}

.rhyming-help-component--words-list {
  all: unset;
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  list-style: none;
  padding: 1rem;
}
/* CREATE PAGE END */

/* LEARN PAGE START */
.learn-page--wikipedia-html-text-div > p {
  margin-top: 0px;
}

.learn-page--container {
  padding: var(--poems-component-outlet-padding);
}

.learn-page--tag-line-and-search-container {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  align-items: center;
  padding-bottom: 2rem;
}

.learn-page--tag-line-and-search-container > p {
  font-family: var(--eb-garamond-font);
  font-size: 1.75rem;
  margin: 0;
}

.learn-page--tag-line-and-search-container > select {
  font-size: 1rem;
  font-family: var(--noto-sans-font);
  height: 2.5rem;
  padding: 0rem 0.5rem;
  border-radius: 4px;
  background-color: #f1f1f1;
}

.learn-page--tag-line-and-search-container > select:hover {
  cursor: pointer;
  border: 1px solid var(--primary-red);
  border-radius: 4px;
  background-color: white;
}

.learn-page--tag-line-and-search-container > select > option:hover {
  background-color: pink;
}

.learn-page--selection-results-container {
  display: flex;
  flex-wrap: wrap;
  gap: 3rem;
}

.learn-page--about-the-poet-container {
  display: flex;
  flex-direction: column;
  flex: 1;
  flex-wrap: wrap;
  padding-top: 1rem;
}

.learn-page--about-the-author-sub-heading {
  font-family: var(--eb-garamond-font);
  font-size: 1.75rem;
  font-weight: 600;
  margin: 1.5rem 0rem;
}

.learn-page--youtube-iframe-container {
  padding: 2rem 0rem;
}

.learn-page--youtube-iframe-container > iframe {
  border-radius: 1rem;
}

@media screen and (max-width: 650px) {
  .learn-page--youtube-iframe-container {
    display: none;
  }
}
/* LEARN PAGE END */

